[gd_scene load_steps=7 format=3 uid="uid://onvbsfdr1tt5"]

[ext_resource type="Texture2D" uid="uid://bm2naay1ovxr7" path="res://assets/images/Fun facts sechseck.png" id="1_25ab1"]
[ext_resource type="Script" uid="uid://jk8pfrl5jtvb" path="res://ui/fun_fact.gd" id="1_vd1e3"]
[ext_resource type="Script" uid="uid://b1fo1ramtu0tc" path="res://ui/FunFactNinePatch.gd" id="2_vd1e3"]
[ext_resource type="FontFile" uid="uid://7e5dd7r3tuwm" path="res://assets/fonts/SourceSans3-Regular.ttf" id="3_gqbaq"]
[ext_resource type="FontFile" uid="uid://dpnlw30s07ynn" path="res://assets/fonts/SourceSans3-Bold.ttf" id="4_ad6sv"]
[ext_resource type="Texture2D" uid="uid://ddleqxkmq2qu0" path="res://assets/images/GoalIcons/climateProtectionIcon.png" id="4_gqbaq"]

[node name="FunFact" type="Control"]
custom_minimum_size = Vector2(2004, 298)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1000.0
offset_top = -149.0
offset_right = 1000.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1000, 149)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_vd1e3")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(2004, 298)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -754.0
offset_top = -149.0
offset_right = 754.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_25ab1")
patch_margin_left = 69
patch_margin_top = 89
patch_margin_right = 69
patch_margin_bottom = 89
script = ExtResource("2_vd1e3")

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
custom_minimum_size = Vector2(1200, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -531.0
offset_top = -35.0
offset_right = 531.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_gqbaq")
expand_mode = 1
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect/HBoxContainer"]
custom_minimum_size = Vector2(1742, 70)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("3_gqbaq")
theme_override_fonts/bold_font = ExtResource("4_ad6sv")
theme_override_font_sizes/normal_font_size = 41
theme_override_font_sizes/bold_font_size = 41
bbcode_enabled = true
text = "Ich bin ein Fun Fact Ã¼ber Norderstedt!"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShowPopupTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true
ignore_time_scale = true

[node name="HidePopupTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
ignore_time_scale = true

[connection signal="resized" from="NinePatchRect/HBoxContainer/RichTextLabel" to="NinePatchRect" method="_on_rich_text_label_resized"]
[connection signal="timeout" from="ShowPopupTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="HidePopupTimer" to="." method="_on_hide_popup_timer_timeout"]
